--- a/bindings/cpp/Cargo.toml
+++ b/bindings/cpp/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "tokenizerscpp"
+name = "tinytokenizers"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "tokenizerscpp"
+name = "tinytokenizers"
 crate-type = ["staticlib"]
 
 [dependencies]
 cxx = "1.0"
-tokenizers = "0.13.1"
+tokenizers = "0.11"
 
 [build-dependencies]
 cxx-build = "1.0"
